--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head> 
 <title>JavaScript Eval</title>
@@ -76,6 +75,8 @@ function copyBack() {
 }
 
 $(function () {
+    $('body').append($('<a href="https://github.com/dglittle/javascript-eval"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>'));
+    
     if ($('.input').val() == '') {
         $('.input').val('hello world!')
     }
