--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 <body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://dglittle.github.io/gl519/index.js"></script>
-<script src="https://dglittle.github.io/cdn/tab.js"></script>
+<script src="http://dglittle.github.io/cdn/tab.js"></script>
 <script>
 
 function go() {
