--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ function copyBack() {
 }
 
 $(function () {
-    $('body').append($('<a href="https://github.com/dglittle/javascript-eval"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>'));
+    $('body').append($('<a href="https://github.com/dglittle/javascript-eval"><img width="64px" style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>'));
     
     if ($('.input').val() == '') {
         $('.input').val('hello world!')
